fix: fixes return item response and create order service